# cmc_forumlas

./: .gitignore  basic_estimates.ipynb  basic_estimates.org  cmc_formulas.org  flake.nix  pyproject.toml
cmc_formulas/: constants.py  formulas.py  typical_values.py
